--- a/guideLine/html/layout/header.html
+++ b/guideLine/html/layout/header.html
@@ -5,8 +5,12 @@
         <div><a href="../sub/htmcss.html">HTML5</a></div>
         <div><a href="../sub/sass.html">SASS</a></div>
         <div><a href="../sub/github.html">Git</a></div>
-        <div><a href="../sub/jquery.html">JQuery</a></div>
         <div><a href="../sub/Vue.html">Vue</a></div>
-        <div><a href="../sub/svelte.html">Svelte</a></div>
+        <div class="red">JQuery(보류)</div>
+        <div class="red">Svelte(보류)</div>
+        <!-- 
+        <div><a href="../sub/jquery.html">JQuery</a></div>
+        <div><a href="../sub/svelte.html">Svelte</a></div> 
+        -->
     </nav>
 </section>
