--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -139,6 +139,8 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 /* Vue */
 .vue-01 { background: url("../images/img-vue-03.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
 
+.vue-04 { background: url("../images/img-vue-04.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
 /* Bullet */
 /* Common */
 /* Font-face */
