--- a/guideLine/assets/sass/layout/_contents.scss
+++ b/guideLine/assets/sass/layout/_contents.scss
@@ -113,7 +113,7 @@ aside{
 #container{
     margin: 30px auto;
     @media (min-width: 320px){
-        width: 100%;
+        width: 95%;
     }
 
     @media (min-width: 768px){
@@ -129,15 +129,15 @@ aside{
             width: 100%;
 
             .project-item{
-                margin-right: 10px;
                 margin-bottom: 10px;
                 border:1px solid;
-
                 @media (min-width: 320px){
+                    margin-right: 0;
                     width: 100%;
                 }
 
                 @media (min-width: 768px){
+                    margin-right: 10px;
                     width: 240px;
                 }
                 height: 250px;
@@ -149,6 +149,7 @@ aside{
                     img{
                         width: 100%;
                         height: 170px;
+                        object-fit: cover;
                     }
                     figcaption{
                         margin-top: 20px;
