--- a/guideLine/assets/sass/layout/_header.scss
+++ b/guideLine/assets/sass/layout/_header.scss
@@ -13,6 +13,14 @@ header {
     height: 100px;
     z-index: 1;
 
+    @media (min-width: 320px){
+        padding: 0 10px;
+    }
+
+    @media (min-width: 768px){
+        padding: 0;
+    }
+    
     section{
         margin: 0 auto;
         
