--- a/guideLine/assets/sass/components/_images.scss
+++ b/guideLine/assets/sass/components/_images.scss
@@ -5,134 +5,134 @@
 
 /* Basic */
 .basic-01{
-    @include imagePush(guideline-basic);
+    @include imagePushGuide(guideline-basic);
     height: 100px;
 }
 .basic-02{
-    @include imagePush(guideline-basic, "02");
+    @include imagePushGuide(guideline-basic, "02");
     height: 100px;
 }
 
 .basic-03{
-    @include imagePush(guideline-basic, "03");
+    @include imagePushGuide(guideline-basic, "03");
     height: 100px;
 }
 
 /* Font */
 .font-01{
-    @include imagePush(guideline-font);
+    @include imagePushGuide(guideline-font);
     height: 100px;
 }
 
 .font-02{
-    @include imagePush(guideline-font, "02");
+    @include imagePushGuide(guideline-font, "02");
     height: 100px;
 }
 
 .font-03{
-    @include imagePush(guideline-font, "03");
+    @include imagePushGuide(guideline-font, "03");
     height: 100px;
 }
 
 /* Bullet */
 .bullet-01{
-    @include imagePush(guideline-bullet);
+    @include imagePushGuide(guideline-bullet);
     height: 100px;
 }
 
 .bullet-02{
-    @include imagePush(guideline-bullet, "02");
+    @include imagePushGuide(guideline-bullet, "02");
     height: 100px;
 }
 
 .bullet-03{
-    @include imagePush(guideline-bullet, "03");
+    @include imagePushGuide(guideline-bullet, "03");
     height: 100px;
 }
 
 .bullet-04{
-    @include imagePush(guideline-bullet, "04");
+    @include imagePushGuide(guideline-bullet, "04");
     height: 100px;
 }
 
 .bullet-05{
-    @include imagePush(guideline-bullet, "05");
+    @include imagePushGuide(guideline-bullet, "05");
     height: 100px;
 }
 
 .bullet-06{
-    @include imagePush(guideline-bullet, "06");
+    @include imagePushGuide(guideline-bullet, "06");
     height: 100px;
 }
 
 .bullet-07{
-    @include imagePush(guideline-bullet, "07");
+    @include imagePushGuide(guideline-bullet, "07");
     height: 100px;
 }
 
 .bullet-08{
-    @include imagePush(guideline-bullet, "08");
+    @include imagePushGuide(guideline-bullet, "08");
     height: 100px;
 }
 
 /* Button */
 .button-01{
-    @include imagePush(guideline-button);
+    @include imagePushGuide(guideline-button);
 }
 
 .button-02{
-    @include imagePush(guideline-button, "02");
+    @include imagePushGuide(guideline-button, "02");
     background-size: cover;
 }
 
 .button-03{
-    @include imagePush(guideline-button, "03");
+    @include imagePushGuide(guideline-button, "03");
     background-size: cover;
 }
 
 .button-04{
-    @include imagePush(guideline-button, "04");
+    @include imagePushGuide(guideline-button, "04");
 }
 
 .button-05{
-    @include imagePush(guideline-button, "05");
+    @include imagePushGuide(guideline-button, "05");
 }
 
 .button-06{
-    @include imagePush(guideline-button, "06");
+    @include imagePushGuide(guideline-button, "06");
 }
 
 .button-07{
-    @include imagePush(guideline-button, "07");
+    @include imagePushGuide(guideline-button, "07");
 }
 
 .button-08{
-    @include imagePush(guideline-button, "08");
+    @include imagePushGuide(guideline-button, "08");
 }
 
 .button-09{
-    @include imagePush(guideline-button, "09");
+    @include imagePushGuide(guideline-button, "09");
 }
 
 .button-10{
-    @include imagePush(guideline-button, "10");
+    @include imagePushGuide(guideline-button, "10");
 }
 
 .button-11{
-    @include imagePush(guideline-button, "11");
+    @include imagePushGuide(guideline-button, "11");
 }
 
 /* Table */
 .table-01{
-    @include imagePush(guideline-table, "01");
+    @include imagePushGuide(guideline-table, "01");
 }
 
 .table-02{
-    @include imagePush(guideline-table, "02");
+    @include imagePushGuide(guideline-table, "02");
 }
 
 .table-03{
-    @include imagePush(guideline-table, "03");
+    @include imagePushGuide(guideline-table, "03");
 }
 
 /* Vue */
