--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -145,6 +145,10 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 
 .vue-05 { background: url("../images/sub/vue/img-vue-05.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
 
+.vue-06 { background: url("../images/sub/vue/img-vue-06.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
+.vue-07 { background: url("../images/sub/vue/img-vue-07.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
 /* Bullet */
 /* Common */
 /* Font-face */
