--- a/guideLine/assets/sass/components/_images.scss
+++ b/guideLine/assets/sass/components/_images.scss
@@ -148,3 +148,11 @@
     @include imagePush(vue,"05");
     height: 400px;
 }
+.vue-06{
+    @include imagePush(vue,"06");
+    height: 400px;
+}
+.vue-07{
+    @include imagePush(vue,"07");
+    height: 400px;
+}
