--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -149,6 +149,9 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 
 .vue-07 { background: url("../images/sub/vue/img-vue-07.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
 
+/* Jquery */
+.jquery-01 { background: url("../images/sub/jquery/img-jquery-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
 /* Bullet */
 /* Common */
 /* Font-face */
