--- a/guideLine/assets/sass/components/_images.scss
+++ b/guideLine/assets/sass/components/_images.scss
@@ -156,3 +156,9 @@
     @include imagePush(vue,"07");
     height: 400px;
 }
+
+/* Jquery */
+.jquery-01{
+    @include imagePush(jquery,"01");
+    height: 400px;
+}
