--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -57,6 +57,14 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 #container section.projectList .project-item figure figcaption span { display: block; line-height: 1.5; }
 #container #clone .clone { background: url("../images/sub/git/img-git-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
 
+ol.number, ol.num-list { left: 0 !important; }
+ol.number { counter-reset: num; }
+ol.number li { position: relative; margin-bottom: 15px; left: 35px; list-style: none; }
+ol.number li:before { content: counter(num); position: absolute; display: inline-block; border: 1px solid #cccccc; border-radius: 100%; top: -2px; left: -35px; width: 25px; height: 25px; text-align: center; line-height: 25px; -webkit-transition: all .3s; transition: all .3s; counter-increment: num 1; border: 1px solid #0075C1; }
+ol.number li:hover:before { background: #0075C1; border-color: #000000; color: #ffffff; }
+ol.num-list { display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); grid-gap: 5px; margin: 10px 0; padding: 10px 0; }
+ol.num-list li { padding: 10px; border: 1px solid #000000; height: 50px; }
+
 /* Button */
 .btn-row { margin: 50px auto 0; width: 100%; }
 .btn-row .one-btn { display: block; background: #0075C1 !important; border: 0; border-radius: 4px; width: 200px !important; height: 50px; text-align: center; color: #ffffff !important; line-height: 50px; }
@@ -177,7 +185,7 @@ h2 { margin-bottom: 15px; padding: 15px 0; border-bottom: 2px solid #000000; fon
 
 h3 { display: inline-block; margin: 5px 0; padding: 10px 20px; background: #333333; font-size: 18px; color: #ffffff; }
 
-h4 { position: relative; margin: 10px 0; left: 15px; font-size: 16px; font-weight: 600; }
+h4 { position: relative; margin: 20px 0; left: 15px; font-size: 16px; font-weight: 600; }
 h4:before { content: ""; position: absolute; background: #ffa500; left: -15px; width: 5px; height: 16px; }
 
 h5 { font-size: 24px; }
