--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -37,12 +37,12 @@ footer article:last-child { padding-top: 0; }
 #sliderContainer .post-wrapper .post:nth-child(7) { color: Indigo; }
 #sliderContainer .post-wrapper .post:nth-child(8) { color: purple; }
 
-aside.Quick { position: fixed; padding-bottom: 20px; border: 1px solid; background: #ffffff; width: 130px; height: auto; bottom: 80px; right: 20px; }
-@media (min-width: 320px) { aside.Quick { display: none; } }
-@media (min-width: 768px) { aside.Quick { display: block; } }
-aside.Quick h2 { text-align: center; font-size: 18px; font-weight: 600; border-bottom: 2px solid #cccccc; background: #000000; color: #ffffff; }
-aside.Quick ul { margin: 0 auto; border: 1px solid; background: #cccccc; width: 80%; }
-aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
+aside.quick { position: fixed; padding-bottom: 20px; border: 1px solid; background: #ffffff; width: 130px; height: auto; bottom: 80px; right: 20px; }
+@media (min-width: 320px) { aside.quick { display: none; } }
+@media (min-width: 768px) { aside.quick { display: block; } }
+aside.quick h2 { text-align: center; font-size: 18px; font-weight: 600; border-bottom: 2px solid #cccccc; background: #000000; color: #ffffff; }
+aside.quick ul { margin: 0 auto; border: 1px solid; background: #cccccc; width: 80%; }
+aside.quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 
 #container { margin: 30px auto; }
 @media (min-width: 320px) { #container { width: 95%; } }
