--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -159,6 +159,18 @@ ol.num-list li { padding: 10px; border: 1px solid #000000; height: 50px; }
 
 .vue-08 { background: url("../images/sub/vue/img-vue-08.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 150px; }
 
+.vue-09 { background: url("../images/sub/vue/img-vue-09.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
+.vue-10 { background: url("../images/sub/vue/img-vue-10.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 150px; }
+
+.vue-11 { background: url("../images/sub/vue/img-vue-11.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
+.vue-12 { background: url("../images/sub/vue/img-vue-12.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 150px; }
+
+.vue-13 { background: url("../images/sub/vue/img-vue-13.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
+
+.vue-14 { background: url("../images/sub/vue/img-vue-14.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 150px; }
+
 /* Jquery */
 .jquery-01 { background: url("../images/sub/jquery/img-jquery-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
 
