--- a/guideLine/assets/sass/components/_images.scss
+++ b/guideLine/assets/sass/components/_images.scss
@@ -188,6 +188,15 @@
     @include imagePush(vue,"14");
     height: 150px;
 }
+.vue-15{
+    @include imagePush(vue,"15");
+    height: 250px;
+}
+.vue-16{
+    @include imagePush(vue,"16");
+    height: 150px;
+}
+
 
 /* Jquery */
 .jquery-01{
