--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -171,6 +171,10 @@ ol.num-list li { padding: 10px; border: 1px solid #000000; height: 50px; }
 
 .vue-14 { background: url("../images/sub/vue/img-vue-14.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 150px; }
 
+.vue-15 { background: url("../images/sub/vue/img-vue-15.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 250px; }
+
+.vue-16 { background: url("../images/sub/vue/img-vue-16.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 150px; }
+
 /* Jquery */
 .jquery-01 { background: url("../images/sub/jquery/img-jquery-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 400px; }
 
@@ -209,6 +213,9 @@ ol { position: relative; left: 30px; list-style: decimal-leading-zero; }
 pre, .explanation-box, .explanation-box-pre { margin: 15px 0; padding: 10px 20px; border: 1px solid; width: 100%; min-height: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 pre { background-color: #000000; color: #ffffff; font-family: 'NanumGothic', 'serif'; font-size: 15px; line-height: 1.5; }
+
+.explanation-box ul li:before { content: ""; }
+.explanation-box ul li div + p { margin-bottom: 20px; }
 
 .explanation-box-pre { padding: 0 15px; }
 
