--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -151,6 +151,22 @@ pre{
     
 }
 
+.explanation-box{
+    ul{
+        li{
+            
+            &:before{
+                content:"";
+            }
+            
+            div{
+                + p {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
+}
 .explanation-box-pre{
     padding: 0 15px;
 }
