--- a/guideLine/assets/sass/layout/_contents.scss
+++ b/guideLine/assets/sass/layout/_contents.scss
@@ -228,3 +228,37 @@ ol{
         }
     }
 }
+
+.sample-list{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+    article{
+        position: relative;
+        border: 1px solid;
+        width: 20%;
+        height: 200px;
+
+        div{
+            display: block;
+            margin-bottom: 0;
+            width: 100%;
+            height: 200px;
+            text-align: center;
+            line-height: 200px;
+            
+
+            &:last-child{
+                position: absolute;
+                background: rgba(0, 0, 0, 0.5);
+                height: 50px;
+                bottom: 0;
+
+                &:hover{
+                  animation: aniHover .5s forwards;  
+                }
+            }
+        }
+    }
+}
