--- a/guideLine/assets/sass/components/_images.scss
+++ b/guideLine/assets/sass/components/_images.scss
@@ -79,7 +79,7 @@
     }
 }
 /* Vue */
-@for $i from 1 through 25{
+@for $i from 1 through 35{
     @if($i < 10){
         .vue-0#{$i}{
             @include imagePush(vue,"0#{$i}");
@@ -99,6 +99,33 @@
     height: 100px;
 }
 
+.vue-16,
+.vue-27{
+    height: 150px;
+}
+
+
+.vue-31{
+    height: 200px;
+}
+
+.vue-18,
+.vue-19,
+.vue-20,
+.vue-22,
+.vue-24,
+.vue-25,
+.vue-30,
+.vue-32,
+.vue-33,
+.vue-34{
+    height: 300px;
+}
+
+.vue-26,
+.vue-35{
+    height: 400px;
+}
 /* Jquery */
 .jquery-01{
     @include imagePush(jquery,"01");
